5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4194/executions/1831_3183.log
== TEST (2019-06-13 17:44:10) 
-- CODE:
from numpy import*
v1 = array(eval(input("Vetor decrescente: ")))

r = array(zeros(*, dtype = int))

for i in range(size(v1)):
	if()
	elif
print()
-- ERROR:
File "XXXX", line 4
    r = array(zeros(*, dtype = int))
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 17:44:19) 
-- CODE:
from numpy import*
v1 = array(eval(input("Vetor decrescente: ")))

r = array(zeros(*, dtype = int))

for i in range(size(v1)):
	if()
	elif()
print(v1)
-- ERROR:
File "XXXX", line 4
    r = array(zeros(*, dtype = int))
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 17:44:32) 
-- CODE:
from numpy import*
v1 = array(eval(input("Vetor decrescente: ")))

r = array(zeros(size(v1, dtype = int))

for i in range(size(v1)):
	if()
	elif()
print(v1)
-- ERROR:
File "XXXX", line 6
    for i in range(size(v1)):
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 17:44:42) 
-- CODE:
from numpy import*
v1 = array(eval(input("Vetor decrescente: ")))

r = array(zeros(size(v1), dtype = int))

for i in range(size(v1)):
	if()
	elif()
print(v1)
-- ERROR:
File "XXXX", line 7
    if()
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 17:45:00) 
-- CODE:
from numpy import*
v1 = array(eval(input("Vetor decrescente: ")))

r = array(zeros(size(v1), dtype = int))

for i in range(size(v1)):
	#if()
print(v1)
-- ERROR:
File "XXXX", line 8
    print(v1)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 17:45:16) 
-- CODE:
from numpy import*
v1 = array(eval(input("Vetor decrescente: ")))

r = array(zeros(size(v1), dtype = int))

for i in range(size(v1)):
	#if()
print(v1)
-- ERROR:
File "XXXX", line 8
    print(v1)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 17:45:39) 
-- CODE:
from numpy import*
v1 = array(eval(input("Vetor decrescente: ")))

r = array(zeros(size(v1), dtype = int))

for i in range(size(v1)):
	
	
print(v1)
-- ERROR:
File "XXXX", line 9
    print(v1)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
